<package format="3">
  <name>prophesee_event_msgs</name>
  <version>0.1.0</version>
  <description>Prophesee event messages for ROS2</description>
  <maintainer email="ky.37f.9850@s.thers.ac.jp">Tanaka Arata</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- <export>
    <build_type>ament_cmake</build_type>
  </export> -->
</package>
